--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,1 @@
-{
-  "compilerOptions": {
-    "target": "es6",
-    "module": "commonjs",
-    "outDir": "./dist",
-    "rootDir": "./src",
-    "strict": true,
-    "esModuleInterop": true,
-    "skipLibCheck": true
-  },
-  "include": ["src/**/*"]
-}
+{ "compilerOptions": { "target": "es6", "module": "commonjs", "esModuleInterop": true } }
