--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,17 @@
 
 node_modules/
 .DS_Store
+# .dockerignore
+node_modules
+npm-debug.log
+Dockerfile
+.dockerignore
+.git
+.gitignore
+README.md
+.env
+.env.*
+dist
+coverage
+.vscode
+*.log
