--- a/backend/package.json
+++ b/backend/package.json
@@ -10,15 +10,19 @@
     },
     "dependencies": {
         "@sendgrid/mail": "^8.1.4",
+        "@types/auth0": "^3.3.10",
+        "auth0": "^4.16.0",
         "bcryptjs": "^2.4.3",
         "cors": "^2.8.5",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "express-oauth2-jwt-bearer": "^1.6.0",
         "express-rate-limit": "^7.5.0",
+        "fetch": "^1.1.0",
         "ioredis": "^5.4.2",
         "kubemq-js": "^1.0.0",
         "mongoose": "^7.0.0",
+        "node-fetch": "^2.7.0",
         "typescript": "^4.9.5"
     },
     "devDependencies": {
@@ -28,6 +32,7 @@
         "@types/jest": "^29.5.0",
         "@types/jsonwebtoken": "^9.0.7",
         "@types/node": "^18.15.0",
+        "@types/node-fetch": "^2.6.12",
         "jest": "^29.5.0",
         "jsonwebtoken": "^9.0.2",
         "nodemon": "^2.0.21",
