--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "@socket.io/redis-adapter": "^8.3.0",
+    "@types/auth0": "^3.3.10",
+    "auth0": "^4.16.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
