--- a/backend/package.json
+++ b/backend/package.json
@@ -3,10 +3,10 @@
     "version": "1.0.0",
     "main": "src/server.ts",
     "scripts": {
-        "start": "node dist/server.js",
-        "dev": "nodemon src/server.ts",
-        "build": "tsc",
-        "test": "jest"
+    "start": "node dist/server.js",
+    "dev": "nodemon src/server.ts",
+    "build": "npm install --production=false && tsc",
+    "test": "jest"
     },
     "dependencies": {
         "@sendgrid/mail": "^8.1.4",
@@ -37,6 +37,7 @@
         "jsonwebtoken": "^9.0.2",
         "nodemon": "^2.0.21",
         "ts-jest": "^29.1.0",
-        "ts-node": "^10.9.1"
+        "ts-node": "^10.9.1",
+        "typescript": "^4.9.5"
     }
 }
