update to add cors

--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
     "scripts": {
     "start": "node dist/server.js",
     "dev": "nodemon src/server.ts",
-    "build": "npm install --production=false && tsc",
+    "build": "npm install --production=true && tsc",
     "test": "jest"
     },
     "dependencies": {
