--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -15,7 +15,7 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
-    "types": ["node", "express", "mongoose", "jest"]  // Added explicit types
+    "types": ["node", "express", "mongoose"]  // Added explicit types
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
