--- a/backend/package.json
+++ b/backend/package.json
@@ -3,9 +3,10 @@
     "version": "1.0.0",
     "main": "src/server.ts",
     "scripts": {
-        "start": "node dist/server.js",
-        "dev": "nodemon src/server.ts",
-        "build": "npm install --production=true && tsc"
+    "start": "node dist/server.js",
+    "dev": "nodemon src/server.ts",
+    "build": "npm install --production=false && tsc",
+    "test": "jest"
     },
     "dependencies": {
         "@sendgrid/mail": "^8.1.4",
@@ -27,13 +28,15 @@
     "devDependencies": {
         "@types/bcryptjs": "^2.4.6",
         "@types/cors": "^2.8.13",
-        "@types/express": "^4.17.21",
+        "@types/express": "^4.17.17",
         "@types/jest": "^29.5.0",
         "@types/jsonwebtoken": "^9.0.7",
         "@types/node": "^18.15.0",
         "@types/node-fetch": "^2.6.12",
+        "jest": "^29.5.0",
         "jsonwebtoken": "^9.0.2",
         "nodemon": "^2.0.21",
+        "ts-jest": "^29.1.0",
         "ts-node": "^10.9.1",
         "typescript": "^4.9.5"
     }
