--- a/backend/package.json
+++ b/backend/package.json
@@ -3,10 +3,10 @@
     "version": "1.0.0",
     "main": "src/server.ts",
     "scripts": {
-    "start": "node dist/server.js",
-    "dev": "nodemon src/server.ts",
-    "build": "npm install --production=false && tsc",
-    "test": "jest"
+        "start": "node dist/server.js",
+        "dev": "nodemon src/server.ts",
+        "build": "npm install --production=false && tsc",
+        "test": "jest"
     },
     "dependencies": {
         "@sendgrid/mail": "^8.1.4",
@@ -19,9 +19,11 @@
         "express-oauth2-jwt-bearer": "^1.6.0",
         "express-rate-limit": "^7.5.0",
         "fetch": "^1.1.0",
+        "form-data": "^4.0.1",
         "ioredis": "^5.4.2",
         "kubemq-js": "^1.0.0",
         "mongoose": "^7.0.0",
+        "node-blob": "^0.0.2",
         "node-fetch": "^2.7.0",
         "typescript": "^4.9.5"
     },
