--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
         "start": "node dist/server.js",
         "dev": "nodemon src/server.ts",
         "build": "npm install --production=false && tsc",
-        "test": "jest"
+        "test": "jest",
+        "seed": "ts-node src/scripts/seedDatabase.ts"
     },
     "dependencies": {
         "@sendgrid/mail": "^8.1.4",
