--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@pinecone-database/pinecone": "^4.1.0",
     "@socket.io/redis-adapter": "^8.3.0",
     "@types/auth0": "^3.3.10",
     "auth0": "^4.16.0",
