--- a/realtime/package.json
+++ b/realtime/package.json
@@ -3,26 +3,35 @@
     "version": "1.0.0",
     "main": "src/server.ts",
     "scripts": {
-      "start": "node dist/server.js",
-      "dev": "nodemon src/server.ts",
-      "build": "tsc",
-      "test": "jest"
+        "start": "node dist/server.js",
+        "dev": "nodemon src/server.ts",
+        "build": "tsc",
+        "test": "jest"
     },
     "dependencies": {
-      "socket.io": "^4.6.0",
-      "ioredis": "^5.3.0",
-      "@socket.io/redis-adapter": "^8.0.0",
-      "dotenv": "^16.0.3",
-      "typescript": "^4.9.5"
+        "@langchain/openai": "^0.3.17",
+        "@langchain/pinecone": "^0.1.3",
+        "@pinecone-database/pinecone": "^4.1.0",
+        "@socket.io/redis-adapter": "^8.0.0",
+        "axios": "^1.7.9",
+        "dotenv": "^16.0.3",
+        "ioredis": "^5.3.0",
+        "langchain": "^0.3.11",
+        "node-fetch": "^2.7.0",
+        "openai": "^4.78.1",
+        "socket.io": "^4.6.0",
+        "typescript": "^4.9.5",
+        "undici": "^7.2.1",
+        "web-streams-polyfill": "^4.1.0"
     },
     "devDependencies": {
-      "@types/node": "^18.15.0",
-      "@types/socket.io": "^3.0.2",
-      "nodemon": "^2.0.21",
-      "ts-node": "^10.9.1",
-      "jest": "^29.5.0",
-      "@types/jest": "^29.5.0",
-      "ts-jest": "^29.1.0"
+        "@types/jest": "^29.5.0",
+        "@types/node": "^18.15.0",
+        "@types/node-fetch": "^2.6.12",
+        "@types/socket.io": "^3.0.2",
+        "jest": "^29.5.0",
+        "nodemon": "^2.0.21",
+        "ts-jest": "^29.1.0",
+        "ts-node": "^10.9.1"
     }
-  }
-  
+}
